# sash

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  display.c  display.h  flake.nix  process.c  process.h  ringbuf.c  ringbuf.h  sash.c  sash.h
.githooks/: pre-commit
.github/workflows/: ci.yml
demo/: demo-build.sh  demo.tape
tests/: run_tests.sh  test_ringbuf.c  test_sanitize.c
